<?xml version="1.0" encoding="utf-8"?>
<layout>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/tv_http"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/btn_tv_http" app:layout_constraintBottom_toTopOf="@id/tv_https"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/tv_https"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/btn_tv_https" app:layout_constraintBottom_toTopOf="@id/tv_socket"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_http" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/tv_socket"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/btn_tv_socke" app:layout_constraintBottom_toTopOf="@id/tv_bluetooth"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_https" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/tv_bluetooth"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/btn_tv_bluetooth" app:layout_constraintBottom_toTopOf="@id/tv_ble"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_socket" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/tv_ble"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/btn_tv_ble" app:layout_constraintBottom_toTopOf="@id/tv_nfc"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bluetooth" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/tv_nfc"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/btn_tv_nfc" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bluetooth" />

</android.support.constraint.ConstraintLayout>
</layout>
